add generic post
